--- a/src/app/Dynamic-form/dynamic-form/dynamic-form.component.html
+++ b/src/app/Dynamic-form/dynamic-form/dynamic-form.component.html
@@ -21,8 +21,14 @@
             {{ currentLang === 'en' ? option.nameEn : option.nameAr }}
           </option>
         </select>
+        <div *ngIf="form.get(field.name)?.invalid && form.get(field.name)?.touched">
+          <small class="text-danger">
+            {{ getErrorMessage(field) }}
+          </small>
+        </div>
+       
       </div><br>
-      <button class="btn btn-primary" type="submit">Submit</button>
+      <button class="btn btn-primary" [disabled]="form.invalid" type="submit">Submit</button>
       
     </form>
     
